added if else ladder

--- a/index.html
+++ b/index.html
@@ -6,19 +6,34 @@
 </head>
 <body>
     
-    <script>
+ <script>
 
-    const age = 18;
-    
-    if(age>=18)
-    {
-        console.log("you are voting");
-    }
-    else
-    {
-        console.log("you are not voting");
-    }
+ const num = 4;
 
+ if(num==1)
+{
+   console.log('one');
+   }
+   else if(num==2)
+   {
+    console.log('two');
+   }
+   else if(num==3)
+   {
+    console.log('three');
+   }
+   else if(num==4)
+   {
+    console.log('four');
+   }
+   else if(num==5)
+   {
+    console.log('five');
+   }
+   else
+   {
+    console.log('invalid number');
+   }
     </script>
 </body>
 </html>
